# orgadoc

./: AUTHORS  COPYING  ChangeLog  Changelog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  ast.e  autogen.sh  bibtex_visitor.e  cgi.e  comment.e  config.guess  config.status  config.sub  configure  configure.ac  default_visitor.e  document.e  grep_visitor.e  html_visitor.e  latex_visitor.e  orgadoc.conf  orgadoc.e  orgadoc.sgml  orgadoc.xace  params.e  parser.y  parser_data.e  print_visitor.e  read_xml.e  readme.xml  scanner.l  template.e  tree_to_ast.e
config/: Makefile.am
docs/: Makefile.in  Makefile.in~  orgadoc-add-docs.sgml  orgadoc-init-readme.man  orgadoc-init-readme.sgml  orgadoc-init-readme.sgml~  orgadoc.conf  orgadoc.man  orgadoc.sgml  orgadoc.sgml~  orgadoc.texi  orgadoc.texinfo  orgadoc.texi~  orgadoc_add_docs.sgml  orgadoc_cgi.sgml  orgadoc_init_readmes.sgml  readme.xml  version.texi  version.texi~
src/: Makefile.am  Makefile.in  Makefile.in~  Makefile.sources  ast.e  bibtex_visitor.e  cgi.e  cgi.xace  comment.e  config.h.in  default_visitor.e  document.e  grep_visitor.e  html_visitor.e  latex_visitor.e  main.c  main.h  main.h~  orgadoc.e  orgadoc.xace  orgadoc_argparse.c  orgadoc_argparse.c~  orgadoc_argparse.h  orgadoc_bibtex_tags.c  orgadoc_bibtex_tags.h  orgadoc_help.c  orgadoc_help.h  orgadoc_html_tags.c  orgadoc_html_tags.h  orgadoc_json_tags.c  orgadoc_json_tags.h  orgadoc_latex_tags.c  orgadoc_latex_tags.h  orgadoc_otext_tags.c  orgadoc_otext_tags.h  orgadoc_search.c  orgadoc_search.h  orgadoc_text_tags.c  orgadoc_text_tags.h  orgadoc_version.c  (+14 more)
src/c/: README  cgi.c  cgi.h  orgadoc.c  orgadoc.h
templates/: document.tpl  link.tpl
templates/ast/: comment.tpl  document.tpl
templates/bibtex/: document.tpl
templates/cgi/: global.tpl
templates/funny/: document.tpl  global.tpl
templates/html/: comment.tpl  document.tpl  global.tpl  link.tpl
templates/latex/: comment.tpl  document.tpl  global.tpl
utils/: Makefile.am  Makefile.in  Makefile.in~  add_docs  init_readmes  orgadoc-add-docs  orgadoc-init-readme  orgadoc-init-readme~  orgadoc-search~  orgadoc_add_docs  orgadoc_add_docs.src  orgadoc_init_readmes  orgadoc_init_readmes.src
